--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Robot Kinematics Visualization</title>
     <style>
       body {
         margin: 0;
       }
     </style>
   </head>
-
   <body>
-    <script src="src/index.js"></script>
+    <script src="/index.[hash].js"></script>
   </body>
 </html>
